Bug: fix sticky header shrinking
Some sort of weird refresh/reload/cache bug.
Hard to tell which version would be the live version when
certain things work as intended or break on refresh/reload.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,17 +53,20 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 header {
-  box-sizing: border-box;
+  // box-sizing: border-box;
   background-color: colors.$primary-color;
   border-bottom: 8px ridge colors.$primary-color;
   box-shadow: 0 1px 3px 0px colors.$accent-color;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   text-wrap: nowrap;
-  position: fixed;
+  position: sticky;
   top: 0;
+  left: 0;
   z-index: 1000;
+
   // Consider scroll down hides nav
   // transition: top 0.2 ease-in-out;
 
@@ -75,6 +78,15 @@ header {
         outline: 1px solid colors.$accent-color;
       }
     }
+  }
+
+  .header-container {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    position: sticky;
+    top: 0;
   }
 }
 
@@ -136,6 +148,9 @@ p {
 */
 
 @media screen and (min-width: 0em) {
+  :root {
+    --header-height: 80px;
+  }
 
   figure {
 
@@ -153,7 +168,7 @@ p {
   }
 
   header {
-    height: 60px;
+    // height: var(--header-height);
     padding: 12px 12px 4px 12px;
     gap: 1rem;
   }
@@ -184,10 +199,11 @@ p {
 
   #hero {
     text-align: center;
+    // padding-top: var(--header-height);
+
     img {
       // Anything below 320px works, even 0.
-      // Below this size website starts to look weird.
-      max-width: 270px;
+      max-width: 270px; // Below this size website starts to look weird.
     }
   }
 
@@ -242,12 +258,16 @@ p {
 /* Large Mobile */
 @media screen and (min-width: 25em) {
 
+  html {
+    // font-size: 18px;
+  }
+
   // .container {
   //   max-width: 380px;
   // }
 
   .website-screenshot {
-    max-width: 320px;
+    max-width: 380px;
   }
 }
 
@@ -261,7 +281,7 @@ p {
 /* Small Desktop */
 @media screen and (min-width: 64em) {
   html {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 
